--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "com.facebook.android:facebook-android-sdk:${FACEBOOK_SDK_VERSION}"
+    implementation project(':expo-modules-core')
 }
