--- a/package.json
+++ b/package.json
@@ -85,10 +85,12 @@
   ],
   "dependencies": {
     "@expo/config-plugins": "^5.0.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "expo-modules-core": "0.11.7"
   },
   "peerDependencies": {
-    "react-native": ">=0.63.3"
+    "react-native": ">=0.63.3",
+    "expo": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
